--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             - PGPASSWORD=postgres_password
             - PGPORT=5432
     client:
+        stdin_open: true
+        tty: true
         build: 
             dockerfile: Dockerfile.dev
             context: ./client
