--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -7,3 +7,13 @@ spec:
     selector:
         matchLabels:
             component: server
+    template:
+        metadata:
+            labels:
+                component: server
+        spec:
+            containers:
+                - name: server
+                  image: kishorenewton/multi-server
+                  ports: 
+                    - containerPort: 5000
