--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -12,11 +12,23 @@ spec:
             labels:
                 component: postgres
         spec:
+            volumes:
+                - name: postgres-storage
+                  persistentVolumeClaim:
+                    claimName: database-presistent-volume-claim
             containers:
                 - name: postgres
-                  image: postgres:10.4
-                  envFrom:
-                    - configMapRef:
-                        name: postgres-config
+                  image: postgres:latest
                   ports:
                     - containerPort: 5432
+                  volumeMounts:
+                    - name: postgres-storage
+                      mountPath: /var/lib/postgresql/data
+                      subPath: postgres
+                  env: 
+                    - name: POSTGRES_PASSWORD
+                      valueFrom: 
+                        secretKeyRef:
+                          name: pgpassword
+                          key: PGPASSWORD
+                      
