--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
     - gcloud auth activate-service-account --key-file service-account.json
     - gcloud config set project steadfast-icon-288421
     - gcloud config set compute/zone us-central1-a
+    - gcloud config set container/use_client_certificate True
     - gcloud container clusters get-credentials multi-cluster --zone us-central1-a --project steadfast-icon-288421
     - echo "$DOCKER_PASSWORD"  | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker build -t kishorenewton/react-test -f ./client/Dockerfile.dev ./client
